<resources>
    <string name="app_name">Consuming Open Data</string>
    <string name="action_settings">Settings</string>
    <string name="where_query">Where Query</string>
    <string name="departamento">Departamento:</string>
    <string name="municipio">Municipio:</string>
    <string name="dosmil1">2001:</string>
    <string name="dosmil2">2002:</string>
    <string name="dosmil3">2003:</string>
    <string name="dosmil4">2004:</string>
    <string name="dosmil5">2005:</string>
    <string name="dosmil6">2006:</string>
    <string name="no_resultados">No se encontraron resultados</string>
    <string name="filtrar_departamento">Filtrar Departamento</string>
    <string name="filtrar_municipio">Filtrar municipio</string>
    <string name="limitar">Limitar</string>
</resources>
