<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.hnino.consumingopendata.MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etDepartamento"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/filtrar_departamento"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etMunicipio"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/filtrar_municipio"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etWhereQuery"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/where_query"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:id="@+id/etLimitar"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:inputType="number"
            android:hint="@string/limitar"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/tvTotalRegistros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/list"
        android:name="com.wimobile.wm.wminventory.features.consulta.ConsultaZonasFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layoutManager="LinearLayoutManager"
        tools:context="com.wimobile.wm.wminventory.features.consulta.ConsultaZonasFragment"
        />



</LinearLayout>
